Updating site and CV for ACL 2025

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -72,3 +72,31 @@ SUPPLEMENTARY INFORMATION: Supplementary data are available at Bioinformatics on
 	file = {King et al_2018_ProbAnnoWeb and ProbAnnoPy.pdf:/Users/bking/Zotero/storage/A25JTAXY/King et al_2018_ProbAnnoWeb and ProbAnnoPy.pdf:application/pdf},
   selected = {true}
 }
+@inproceedings{cai-etal-2025-search,
+    title = "In Search of the Lost Arch in Dialogue: A Dependency Dialogue Acts Corpus for Multi-Party Dialogues",
+    author = "Cai, Jon  and
+      King, Brendan  and
+      Cameron, Peyton  and
+      Brown, Susan Windisch  and
+      Eckert, Miriam  and
+      Srinivas, Dananjay  and
+      Baker, George Arthur  and
+      Everson, V Kate  and
+      Palmer, Martha  and
+      Martin, James  and
+      Flanigan, Jeffrey",
+    editor = "Che, Wanxiang  and
+      Nabende, Joyce  and
+      Shutova, Ekaterina  and
+      Pilehvar, Mohammad Taher",
+    booktitle = "Findings of the Association for Computational Linguistics: ACL 2025",
+    month = jul,
+    year = "2025",
+    address = "Vienna, Austria",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.findings-acl.1032/",
+    pages = "20135--20149",
+    ISBN = "979-8-89176-256-5",
+    selected = {true},
+    abstract = "Understanding the structure of multi-party conversation and the intentions and dialogue acts of each speaker remains a significant challenge in NLP. While a number of corpora annotated using theoretical frameworks of dialogue have been proposed, these typically focus on either utterance-level labeling of speaker intent, missing wider context, or the rhetorical structure of a dialogue, losing fine-grained intents captured in dialogue acts. Recently, the Dependency Dialogue Acts (DDA) framework has been proposed to for modeling both the fine-grained intents of each speaker and the structure of multi-party dialogues. However, there is not yet a corpus annotated with this framework available for the community to study. To address this gap, we introduce a new corpus of 33 dialogues and over 9,000 utterance units, densely annotated using the Dependency Dialogue Acts (DDA) framework.Our dataset spans four genres of multi-party conversations from different modalities: (1) physics classroom discussions, (2) engineering classroom discussions, (3) board game interactions, and (4) written online game chat logs. Each session is doubly annotated and adjudicated to ensure high-quality labeling. We present a description of the dataset and annotation process, an analysis of speaker dynamics enabled by our annotation, and a baseline evaluation of LLMs as DDA parsers. We discuss the implications of this dataset understanding dynamics between speakers and for developing more controllable dialogue agents."
+}
